Add a header with a horizontal nav
This will handle navigation between top level sections, leaving the
sidebar for navigation within a section.

--- a/test.html
+++ b/test.html
@@ -7,8 +7,18 @@
   <meta name="description" content="">
   <link rel="stylesheet" type="text/css" href="assets/site.css">
  </head>
- <body>
- <div class="optional-sidebar-layout optional-sidebar-layout-full-height">
+ <body class="full-height-with-header">
+ <header>
+  <nav class="">
+    <ul class="horizontal-list">
+      <li><a href="">A really long title for a thing</a></li>
+      <li><a href="">A short title</a></li>
+      <li><a href="">A short title</a></li>
+      <li><a href="">A short title</a></li>
+    </ul>
+  </nav>
+ </header>
+ <div class="optional-sidebar-layout">
   <nav>
     <ul class="navigation-list">
       <li><a href="">A really long title for a thing</a></li>
