--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
  <header>
   <nav class="">
     <ul class="horizontal-list">
-      <li><a href="">A really long title for a thing</a></li>
+      <li class="selected"><a href="">A really long title for a thing</a></li>
       <li><a href="">A short title</a></li>
       <li><a href="">A short title</a></li>
       <li><a href="">A short title</a></li>
