--- a/test.html
+++ b/test.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <link rel="stylesheet" type="text/css" href="assets/site.css">
+  <link rel="stylesheet" type="text/css" href="assets/prism.css">
+  <script src="assets/prism.js" defer></script>
  </head>
  <body class="full-height-with-header">
  <header>
@@ -29,9 +31,19 @@
     <h1>Hello world</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <pre><code>print("hello world")</code></pre>
     <h2>this is a h2</h2>
+    <p>And then we run <code>print("hello world")</code></p>
     <p>Some text</p>
-    <p>Some text</p>
+    <pre><code class="language-ruby">template = File.read("templates/page.html.erb")
+
+output = ERB.new(template).result_with_hash(
+  title: CGI.escape_html("Stuff &amp; things"),
+  meta_description: CGI.escape_html("In which we define \"stuff\" and \"things\""),
+  content: "&lt;p&gt;Hello world&lt;/p&gt;",
+  navigation: generate_example_nav
+)
+  </code></pre>
     <h3>this is a H3</h3>
     <p>Some text</p>
     <h4>this is a h4</h4>
