Make CSS spacing more consistent
And get rid of unused variables

--- a/test.html
+++ b/test.html
@@ -22,10 +22,17 @@
  </header>
  <div class="optional-sidebar-layout">
   <nav>
-    <ul class="navigation-list">
-      <li><a href="">A really long title for a thing</a></li>
-      <li><a href="">A short title</a></li>
-    </ul><br>
+      <h1><a href="#">Foo</a></h1>
+      <ul class="navigation-list">
+        <li><a href="#">Title 1</a></li>
+        <li><a href="#">Title 2</a></li>
+      </ul>
+
+      <h1><a href="#">Bar</a></h1>
+      <ul class="navigation-list">
+        <li><a href="#">A really long title</a></li>
+        <li><a href="#">Title 3</a></li>
+      </ul>
   </nav>
   <article>
     <h1>Hello world</h1>
