--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
  </head>
  <body class="full-height-with-header">
  <header>
-  <nav class="">
+  <nav id="section-nav">
     <ul class="horizontal-list">
       <li class="selected"><a href="">A really long title for a thing</a></li>
       <li><a href="">A short title</a></li>
@@ -21,7 +21,7 @@
   </nav>
  </header>
  <div class="optional-sidebar-layout">
-  <nav>
+  <nav id="sidebar-nav">
       <h1><a href="#">Foo</a></h1>
       <ul class="navigation-list">
         <li><a href="#">Title 1</a></li>
@@ -35,6 +35,12 @@
       </ul>
   </nav>
   <article>
+    <nav id="breadcrumb" aria-label="Breadcrumb trail">
+      <ul>
+        <li><a href="">Foo</a></li><li><a href="">Bar</a></li><li>Baz</li>
+      </ul>
+    </nav>
+
     <h1>Hello world</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
