Stop using wrap-reverse
Previously, I used flex-wrap: wrap-reverse so that the nav turned into a
footer on narrow screens.

However, this creates very strange behaviour when navigating via
keyboard or assistive tech, because the DOM order and focus order do not
match the visual order.

I think it's better to just not use this. Instead, we can put the nav on
the right hand side so the order is the same regardless of whether the
content is laid out left to right or top to bottom.

--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
  </head>
  <body class="full-height-with-header">
  <header>
+  <a class="skip-link" href='#content'>Skip to content</a>
   <nav id="section-nav">
     <ul class="horizontal-list">
       <li class="selected"><a href="">A really long title for a thing</a></li>
@@ -21,19 +22,6 @@
   </nav>
  </header>
  <div class="optional-sidebar-layout">
-  <nav id="sidebar-nav">
-      <h1><a href="#">Foo</a></h1>
-      <ul class="navigation-list">
-        <li><a href="#">Title 1</a></li>
-        <li><a href="#">Title 2</a></li>
-      </ul>
-
-      <h1><a href="#">Bar</a></h1>
-      <ul class="navigation-list">
-        <li><a href="#">A really long title</a></li>
-        <li><a href="#">Title 3</a></li>
-      </ul>
-  </nav>
   <article>
     <nav id="breadcrumb" aria-label="Breadcrumb trail">
       <ul>
@@ -71,6 +59,19 @@ output = ERB.new(template).result_with_hash(
     <h3>this is a H3</h3>
     <p>Some text</p>
   </article>
+  <nav id="sidebar-nav">
+    <h1><a href="#">Foo</a></h1>
+    <ul class="navigation-list">
+      <li><a href="#">Title 1</a></li>
+      <li><a href="#">Title 2</a></li>
+    </ul>
+
+    <h1><a href="#">Bar</a></h1>
+    <ul class="navigation-list">
+      <li><a href="#">A really long title</a></li>
+      <li><a href="#">Title 3</a></li>
+    </ul>
+  </nav>
  </div>
  </body>
 </html>
