--- a/test.html
+++ b/test.html
@@ -66,7 +66,7 @@ output = ERB.new(template).result_with_hash(
       <li><a href="#">Title 2</a></li>
     </ul>
 
-    <h1><a href="#">Bar</a></h1>
+    <h1><a href="#">A really long title section</a></h1>
     <ul class="navigation-list">
       <li><a href="#">A really long title</a></li>
       <li><a href="#">Title 3</a></li>
