--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
         <li><a href="">Foo</a></li><li><a href="">Bar</a></li><li>Baz</li>
       </ul>
     </nav>
-
+    <div class="centered-content">
     <h1>Hello world</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -36,7 +36,7 @@
     <h2>this is a h2</h2>
     <p>And then we run <code>print("hello world")</code></p>
     <p>Some text</p>
-    <pre><code class="language-ruby">template = File.read("templates/page.html.erb")
+    <pre class="code-block"><code class="language-ruby">template = File.read("templates/page.html.erb")
 
 output = ERB.new(template).result_with_hash(
   title: CGI.escape_html("Stuff &amp; things"),
@@ -58,6 +58,7 @@ output = ERB.new(template).result_with_hash(
     <p>Some text</p>
     <h3>this is a H3</h3>
     <p>Some text</p>
+  </div>
   </article>
   <nav id="sidebar-nav">
     <h1><a href="#">Foo</a></h1>
@@ -72,6 +73,7 @@ output = ERB.new(template).result_with_hash(
       <li><a href="#">Title 3</a></li>
     </ul>
   </nav>
+
  </div>
  </body>
 </html>
