--- a/test.html
+++ b/test.html
@@ -6,7 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <link rel="stylesheet" type="text/css" href="assets/site.css">
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      extensions: ["tex2jax.js"],
+      jax: ["input/TeX", "output/HTML-CSS"],
+      tex2jax: {
+        inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+        displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+        processEscapes: true
+      },
+      "HTML-CSS": { availableFonts: ["TeX"] }
+    });
+  </script>
   <script src="assets/prism.js" defer></script>
+  <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js" defer></script>
  </head>
  <body class="full-height-with-header">
  <header>
@@ -55,6 +68,8 @@ output = ERB.new(template).result_with_hash(
     <p>Some text</p>
     <h2>this is a h2</h2>
     <p>Some text</p>
+    <p>$$f(t₁ □ t₂) == f(t₁) ◇ f(t₂)$$
+      Bla bla bla</p>
     <p>Some text</p>
     <h3>this is a H3</h3>
     <p>Some text</p>
