--- a/test.html
+++ b/test.html
@@ -48,6 +48,9 @@
     <h2>this is a h2</h2>
     <p>And then we run <code>print("hello world")</code></p>
     <p>Some text</p>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <p>Some text</p>
     <pre class="code-block"><code class="language-ruby">template = File.read("templates/page.html.erb")
 
 output = ERB.new(template).result_with_hash(
