Add some table styling

--- a/test.html
+++ b/test.html
@@ -74,6 +74,25 @@ output = ERB.new(template).result_with_hash(
     <p>$$f(t₁ □ t₂) == f(t₁) ◇ f(t₂)$$
       Bla bla bla</p>
     <p>Some text</p>
+    <table>
+      <caption id="Caption01">Some caption</caption>
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">Value</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+        <td>ABC</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+        <td>DEF</td>
+        </tr>
+      </tbody>
+    </table>
     <h3>this is a H3</h3>
     <p>Some text</p>
   </div>
