--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <link rel="stylesheet" type="text/css" href="assets/site.css">
+  <link rel="stylesheet" type="text/css" href="assets/syntax.css">
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
       extensions: ["tex2jax.js"],
@@ -35,13 +36,6 @@
  </header>
  <div class="optional-sidebar-layout">
   <article>
-    <div class="centered-content">
-      <nav id="breadcrumb" aria-label="Breadcrumb trail">
-        <ul>
-          <li><a href="">Foo</a></li><li><a href="">Bar</a></li><li>Baz</li>
-        </ul>
-      </nav>
-    <h1>Hello world</h1>
     <div class="cards">
       <div class="card">
       <h2>I'm a card</h2>
@@ -68,6 +62,13 @@
         </ul>
       </div>
     </div>
+    <div class="centered-content">
+      <nav id="breadcrumb" aria-label="Breadcrumb trail">
+        <ul>
+          <li><a href="">Foo</a></li><li><a href="">Bar</a></li><li>Baz</li>
+        </ul>
+      </nav>
+    <h1>Hello world</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <pre><code>print("hello world")</code></pre>
