Style search form

--- a/test.html
+++ b/test.html
@@ -40,7 +40,7 @@
 
  </header>
  <div class="optional-sidebar-layout">
-  <article>
+  <article id="content">
     <div class="cards">
       <div class="card">
       <h2>I'm a card</h2>
